created_message box

--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -47,6 +47,7 @@
     height: 900px;
     width: 260px;
     padding: 20px;
+    overflow: scroll;
     .chat{
       min-width: auto;
       margin-bottom:40px;
