--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,32 +1,63 @@
-.header{
-  width:1140px;
-  height:100px;
-  margin-left: 300px;
-  position: fixed;
-  border-bottom: solid 1px #eee;
-  margin-top: 20px;
-  padding-left: 40px;
+.chat-main {
+  float: left;
+  background-color: #FFFFFF;
+  width: calc(100vw - 300px);
 
-  .header_box {
-    display: inline-block;
-    margin-top: 35px;
-    color: #333333;
-    font-size: 20px;
+  .header {
+    width: calc(100vw - 300px);
+    height: 100px;
+    position: fixed;
+    border-bottom: solid 1px #eee;
+    margin-top: 20px;
+    padding-left: 40px;
+    background-color: #FFFFFF;
+
+    .header_box {
+      display: inline-block;
+      margin-top: 35px;
+      color: #333333;
+      font-size: 20px;
+    }
+    .team_member {
+      display: block;
+      color: #999999;
+      font-size: 11px;
+      padding-top: 15px;
+    }
+
   }
-  .team_member{
+
+  .message {
     display: block;
+    background-color: #eeeeee;
+    height: 980px;
+    overflow: scroll;
+    margin-top: 120px;
+    padding: 46px;
 
-    color: #999999;
-    font-size: 11px;
-    padding-top:15px;
 
+    .message_box {
+      min-width: auto;
+      margin-bottom:40px;
 
-
+      .user_name {
+        font-size: 16px;
+        font-weight: bold;
+        margin-right: 10px;
+        display: inline-block;
+        margin-bottom: 10px;
+        color:#434A54;
+      }
+      .date_time {
+        font-size: 12px;
+        color: #999999;
+        display: inline-block;
+      }
+      .mail {
+        font-size: 14px;
+        color:#434A54;
+      }
+    }
   }
 
 }
-.message{
-  background-color: #b8b8b8;
-
-}
-
