--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -9,8 +9,8 @@
 }
 .side_bar {
   float: left;
-  height: 100%;
-  margin-top:23px;
+  height: 700px;
+  margin-top:20px;
 
 
   .title {
@@ -44,7 +44,7 @@
   .group {
     margin-top: 100px;
     background-color: #2E3e51;
-    height: 900px;
+    height:100vh;
     width: 260px;
     padding: 20px;
     overflow: scroll;
