--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -18,6 +18,17 @@
       color: #333333;
       font-size: 20px;
     }
+    .edit{
+      background-color: #FFFFFF;
+      height:40px;
+      padding: 0 20px;
+      border: solid 1px #38aef0;
+      position: absolute;
+      right: 80px;
+      top:28px;
+      line-height: 40px;
+      color:#38aef0;
+    }
     .team_member {
       display: block;
       color: #999999;
@@ -31,7 +42,6 @@
     display: block;
     background-color: #eeeeee;
     height: 650px;
-    overflow: scroll;
     margin-top: 120px;
     padding: 46px 40px;
 
@@ -73,6 +83,13 @@
       width:945px;
       display:inline-block;
       margin-right:15px;
+      .mark2{
+        color:black;
+        float:right;
+        font-size: 25px;
+        padding:7px;
+      }
+
     }
 
     .submit-btn {
