--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,35 +1,31 @@
 .chat-main {
-  float: left;
+  float: right;
   width: calc(100vw - 300px);
-  height:100%;
+  height:100vh;
 
   .header {
-    width: calc(100vw - 300px);
-    height: 100px;
-    position: fixed;
     border-bottom: solid 1px #eee;
-    margin-top: 20px;
     padding-left: 40px;
-    background-color: #FFFFFF;
+    background-color: $mainWhiteColor;
 
-    .header_box {
+    .header__box {
       display: inline-block;
-      margin-top: 35px;
+      margin-top: 37px;
       color: #333333;
       font-size: 20px;
     }
-    .edit{
-      background-color: #FFFFFF;
+    .header__edit{
+      background-color: $mainWhiteColor;
       height:40px;
       padding: 0 20px;
-      border: solid 1px #38aef0;
+      border: solid 1px $mainBlueColor;
       position: absolute;
       right: 80px;
-      top:28px;
+      top:52px;
       line-height: 40px;
-      color:#38aef0;
+      color:$mainBlueColor
     }
-    .team_member {
+    .header__member {
       display: block;
       color: #999999;
       font-size: 11px;
@@ -39,17 +35,15 @@
   }
 
   .message {
-    display: block;
-    background-color: #eeeeee;
-    height: 650px;
-    margin-top: 120px;
+    background-color: $mainGrayColor;
+    height: calc(100vh - 174px);
     padding: 46px 40px;
+    overflow: scroll;
 
-    .message_box {
-      min-width: auto;
+    .message__box {
       margin-bottom: 40px;
 
-      .user_name {
+      .message__name {
         font-size: 16px;
         font-weight: bold;
         margin-right: 10px;
@@ -57,51 +51,55 @@
         margin-bottom: 10px;
         color: #434A54;
       }
-      .date_time {
+      .message__datetime {
         font-size: 12px;
-        color: #999999;
+        color: $SubGrayColor;
         display: inline-block;
       }
-      .mail {
+      .message__mail {
         font-size: 14px;
         color: #434A54;
       }
     }
   }
-  .form_text {
+  .text {
     height: 50px;
     background-color: #ddd;
     padding: 20px 40px;
     position: fixed;
     bottom:0;
+    width: calc(100vw - 380px);
+
+    .text__column{
+      position:relative;
 
 
-
-    .input_text {
-      height: 50px;
-      background-color: #FFFFFF;
-      width:945px;
-      display:inline-block;
-      margin-right:15px;
-      .mark2{
-        color:black;
-        float:right;
-        font-size: 25px;
-        padding:7px;
+      .text__box {
+        height: 50px;
+        background-color: $mainWhiteColor;
+        width:850px;
+        padding: 0 40px 0 10px;
+        color: #434a54;
       }
 
-    }
-
-    .submit-btn {
-          height:50px;
-         float:right;
-         width: 100px;
-          background-color: #38aef0;
-      display:inline-block;
-
-        }
+      .text__folder {
+          position: absolute;
+          right: 130px;
+          bottom: 20px;
 
       }
-
     }
+
+      .text__submit-btn {
+        margin-left:15px;
+        height:50px;
+        width: 100px;
+        background-color: $mainBlueColor;
+        position:absolute;
+        right:0;
+        color:$mainWhiteColor;
+      }
+    }
+}
+
 
