--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,23 +1,3 @@
-.notice グループを作成しました
-.side_bar
-  .title
-    .box
-      .p Chatspace
-      .mark
-        %label.upload-label{for: "upload-icon"}
-        %i.fa.fa-edit
-        %label.upload-label{for: "upload-icon"}
-        %i.fa.fa-cog
-  .group
-    .chat
-      .group_name グループの名前
-      .conversation 会話内容
-    .chat
-      .group_name グループの名前
-      .conversation 会話内容
-    .chat
-      .group_name グループの名前
-      .conversation 会話内容
-
+=render partial: "sidebar"
 =render partial: "header"
 
