--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -8,13 +8,13 @@
     padding-left: 40px;
     background-color: $mainWhiteColor;
 
-    .header__box {
+    &__box {
       display: inline-block;
       margin-top: 37px;
       color: #333333;
       font-size: 20px;
     }
-    .header__edit{
+    &__edit{
       background-color: $mainWhiteColor;
       height:40px;
       padding: 0 20px;
@@ -25,7 +25,7 @@
       line-height: 40px;
       color:$mainBlueColor
     }
-    .header__member {
+    &__member {
       display: block;
       color: #999999;
       font-size: 11px;
