--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -1,22 +1,22 @@
 .notice グループを作成しました
-.side__bar
+.side
   .side__title
-    .side__box
-      .side__p Chatspace
-      .side__mark
+    .title__box
+      .p Chatspace
+      .mark
         %label.upload-label{for: "upload-icon"}
         %i.fa.fa-edit
         %label.upload-label{for: "upload-icon"}
         %i.fa.fa-cog
   .group
     .group__chat
-      .group__name グループの名前
-      .group__conversation 会話内容
+      .group__chat__name グループの名前
+      .group__chat__conversation 会話内容
     .group__chat
-      .group__name グループの名前
-      .group__conversation 会話内容
+      .group__chat__name グループの名前
+      .group__chat__conversation 会話内容
     .group__chat
-      .group__name グループの名前
-      .group__conversation 会話内容
+      .group__chat__name グループの名前
+      .group__chat__conversation 会話内容
 
 
