--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -6,7 +6,7 @@
 
 
 }
-.side__bar {
+.side {
   float: left;
   height: 100vh;
 
@@ -16,7 +16,7 @@
     height: 100px;
     background-color: #253141;
 
-    .side__box {
+    .title__box {
       height: 20px;
       align-items: center;
       width:260px;
@@ -28,12 +28,13 @@
 
       justify-content: space-between;
 
-      .side__p {
+      .p {
         font-size: 16px;
         font-weight: bold;
         color: $mainWhiteColor;
       }
-      .side__mark {
+
+      .mark {
         color: $mainWhiteColor;
 
       }
@@ -48,13 +49,13 @@
     overflow: scroll;
     .group__chat{
       margin-bottom:40px;
-      .group__name {
+      &__name {
         color: $mainWhiteColor;
         margin-bottom: 5px;
         font-size: 15px;
         font-weight: bold;
       }
-      .group__conversation{
+      &__conversation{
         color: $mainWhiteColor;
         font-size: 11px;
         font-weight: bold;
