--- a/app/assets/stylesheets/_content.scss
+++ b/app/assets/stylesheets/_content.scss
@@ -1,7 +1,7 @@
 .chat-main {
   float: right;
   width: calc(100vw - 300px);
-  height:100vh;
+  height: 100vh;
 
   .header {
     border-bottom: solid 1px #eee;
@@ -17,12 +17,12 @@
 
     &__edit{
       background-color: $mainWhiteColor;
-      height:40px;
+      height: 40px;
       padding: 0 20px;
       border: solid 1px $mainBlueColor;
       position: absolute;
       right: 80px;
-      top:52px;
+      top: 52px;
       line-height: 40px;
       color:$mainBlueColor
     }
@@ -31,7 +31,7 @@
       display: block;
       color: #999999;
       font-size: 11px;
-      padding-top: 15px;
+      padding: 10px 0 5px 0;
     }
   }
 
@@ -71,11 +71,11 @@
     background-color: #ddd;
     padding: 20px 40px;
     position: fixed;
-    bottom:0;
+    bottom: 0;
     width: calc(100vw - 380px);
 
     .text{
-      position:relative;
+      position: relative;
 
 
       &__box {
@@ -95,12 +95,12 @@
     }
 
       .text__submit-btn {
-        margin-left:15px;
-        height:50px;
+        margin-left: 15px;
+        height: 50px;
         width: 100px;
         background-color: $mainBlueColor;
-        position:absolute;
-        right:0;
+        position: absolute;
+        right: 0;
         color:$mainWhiteColor;
       }
     }
