--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
+@import "font-awesome";
 @import "./reset";
 @import "./variable";
 @import "sidebar";
-@import "header";
-@import "font-awesome";
+@import "content";
+@import "notice";
