--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,3 +1,4 @@
-=render partial: "sidebar"
-=render partial: "header"
+= render partial: "shared/notice"
+= render partial: "sidebar"
+= render partial: "content"
 
