--- a/app/assets/stylesheets/_notice.scss
+++ b/app/assets/stylesheets/_notice.scss
@@ -1,6 +1,6 @@
 .notice {
-  background-color: $mainBlueColor;
+  background-color: $mainPointColor;
   text-align: center;
-  color: $mainWhiteColor;
+  color: $mainFontColor;
   width: 100vw;
 }
