--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -1,4 +1,4 @@
-$mainWhiteColor: #FFFFFF;
-$mainBlueColor: #38aef0;
-$mainGrayColor: #eeeeee;
-$SubGrayColor: #999999;
+$mainFontColor: #FFFFFF;
+$mainPointColor: #38aef0;
+$mainBackColor: #eeeeee;
+$changebleColor: #999999;
