--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -3,9 +3,9 @@
   .side__title
     .sign_in__user Karen
     .side__menu
-      = link_to '#',　class: 'edit' do
-        =fa_icon 'edit'
-      = link_to '#',　class: 'cog' do
+      = link_to '#',　class: 'new_group' do
+        = fa_icon 'edit'
+      = link_to '#',　class: 'edit__account' do
         = fa_icon 'cog'
   .group
     .group__chat
