--- a/app/views/messages/_content.html.haml
+++ b/app/views/messages/_content.html.haml
@@ -1,8 +1,8 @@
 .chat-main
-  .header
-    .header__box グループ名
-    .header__edit Edit
-    .header__member Member : Karen , AAA , BBB
+  .chat-main__header
+    .chat-main__header__box グループ名
+    .chat-main__header__edit Edit
+    .chat-main__header__member Member : Karen , AAA , BBB
   .contents
     .message
       .message__name User_name
