--- a/app/assets/stylesheets/_content.scss
+++ b/app/assets/stylesheets/_content.scss
@@ -3,7 +3,7 @@
   width: calc(100vw - 300px);
   height: 100vh;
 
-  .header {
+  .chat-main__header {
     border-bottom: solid 1px #eee;
     padding-left: 40px;
     background-color: $mainFontColor;
