modified some files2

--- a/app/assets/stylesheets/_variable.scss
+++ b/app/assets/stylesheets/_variable.scss
@@ -1,4 +1,4 @@
 $mainFontColor: #FFFFFF;
 $mainPointColor: #38aef0;
 $mainBackColor: #eeeeee;
-$changebleColor: #999999;
+$datetimeFontColor: #999999;
