--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -4,9 +4,9 @@
     .sign_in__user Karen
     .side__menu
       = link_to '#',　class: 'new_group' do
-        = fa_icon 'edit'
-      = link_to '#',　class: 'edit__account' do
-        = fa_icon 'cog'
+        = fa_icon 'edit',class: "fa-white"
+      = link_to '#',　class: 'edit_account' do
+        = fa_icon 'cog',class: "fa-white"
   .group
     .group__chat
       .group__chat__name グループの名前
