--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,4 +1,4 @@
-= render partial: "shared/notice"
-= render partial: "sidebar"
-= render partial: "content"
+= render 'shared/notice'
+= render 'sidebar'
+= render 'content'
 
