--- a/app/assets/stylesheets/_content.scss
+++ b/app/assets/stylesheets/_content.scss
@@ -53,7 +53,7 @@
 
       &__datetime {
         font-size: 12px;
-        color: $changebleColor;
+        color: $datetimeFontColor;
         display: inline-block;
       }
 
@@ -72,7 +72,7 @@
     bottom: 0;
     width: calc(100vw - 380px);
 
-    .type__messages{
+    .message__form{
       position: relative;
 
       &__box {
