--- a/app/views/messages/_content.html.haml
+++ b/app/views/messages/_content.html.haml
@@ -1,8 +1,9 @@
 .chat-main
   .chat-main__header
-    .chat-main__header__box グループ名
-    .chat-main__header__edit Edit
-    .chat-main__header__member Member : Karen , AAA , BBB
+    .chat-main__header__detail
+      .chat-main__header__detail__box グループ名
+      .chat-main__header__detail__member Member : Karen , AAA , BBB
+    .chat__header__edit Edit
   .contents
     .message
       .message__name User_name
