--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -8,12 +8,15 @@
       = link_to '#',　class: 'edit_account' do
         = fa_icon 'cog',class: "fa-white"
   .group
-    .group__chat
-      .group__chat__name グループの名前
-      .group__chat__conversation 会話内容
-    .group__chat
-      .group__chat__name グループの名前
-      .group__chat__conversation 会話内容
-    .group__chat
-      .group__chat__name グループの名前
-      .group__chat__conversation 会話内容
+    = link_to '#',　class: 'group__choice' do
+      .group__chat
+        .group__chat__name グループの名前
+        .group__chat__conversation 会話内容
+    = link_to '#',　class: 'group__choice' do
+      .group__chat
+        .group__chat__name グループの名前
+        .group__chat__conversation 会話内容
+    = link_to '#',　class: 'group__choice' do
+      .group__chat
+        .group__chat__name グループの名前
+        .group__chat__conversation 会話内容
