--- a/app/assets/stylesheets/_content.scss
+++ b/app/assets/stylesheets/_content.scss
@@ -5,32 +5,32 @@
 
   .chat-main__header {
     border-bottom: solid 1px #eee;
-    padding-left: 40px;
+    padding: 37px 40px 0 40px;
     background-color: $mainFontColor;
 
-    &__box {
+    .chat-main__header__detail {
       display: inline-block;
-      margin-top: 37px;
-      color: #333333;
-      font-size: 20px;
-    }
 
-    &__edit{
-      background-color: $mainFontColor;
-      height: 40px;
-      padding: 0 20px;
-      border: solid 1px $mainPointColor;
-      margin: 28px 40px 20px 0;
-      float: right;
-      line-height: 40px;
-      color: $mainPointColor;
-    }
+      &__box {
+        display: inline-block;
+        color: #333333;
+        font-size: 20px;
+      }
 
-    &__member {
-      color: #999999;
-      font-size: 11px;
-      padding: 10px 0 5px 0;
+      &__member {
+        color: #999999;
+        font-size: 11px;
+        padding: 10px 0 5px 0;
+      }
     }
+    .chat__header__edit {
+        background-color: $mainFontColor;
+        padding: 0 20px;
+        border: solid 1px $mainPointColor;
+        float: right;
+        line-height: 40px;
+        color: $mainPointColor;
+      }
   }
 
   .contents {
