--- a/app/assets/stylesheets/_content.scss
+++ b/app/assets/stylesheets/_content.scss
@@ -1,17 +1,20 @@
-.chat {
+.chat-main {
   float: right;
   width: calc(100vw - 300px);
+  height: 100vh;
 
-  &__header {
+  .chat-main__header {
     border-bottom: solid 1px #eee;
     padding: 37px 40px 0 40px;
     background-color: $mainFontColor;
 
-    &__detail {
+    .chat-main__header__detail {
       display: inline-block;
-      font-size: 20px;
 
       &__box {
+        display: inline-block;
+        color: #333333;
+        font-size: 20px;
       }
 
       &__member {
@@ -20,7 +23,8 @@
         padding: 10px 0 5px 0;
       }
     }
-    &__edit {
+
+    .chat__header__edit {
         background-color: $mainFontColor;
         padding: 0 20px;
         border: solid 1px $mainPointColor;
@@ -30,13 +34,13 @@
       }
   }
 
-  &-main {
+  .contents {
     background-color: $mainBackColor;
+    height: calc(100vh - 90px);
     padding: 46px 40px;
     overflow: scroll;
-    height: calc(100vh - 214px);
 
-    &__message {
+    .message {
       margin-bottom: 40px;
 
       &__name {
@@ -61,7 +65,7 @@
     }
   }
 
-  &__text {
+  .text__footer {
     height: 50px;
     background-color: #ddd;
     padding: 20px 40px;
@@ -69,10 +73,10 @@
     bottom: 0;
     width: calc(100vw - 380px);
 
-    &__form{
+    .message__form{
       position: relative;
 
-    &__box {
+      &__box {
         height: 50px;
         background-color: $mainFontColor;
         width: calc(100vw - 550px);
@@ -89,7 +93,7 @@
       }
     }
 
-    &__submit-btn {
+    .text__submit-btn {
         margin-left: 15px;
         height: 54px;
         width: 95px;
