--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -1,10 +1,10 @@
-.sidebar {
+.side {
   float: left;
   height: 100vh;
   width: 300px;
   color: $mainFontColor;
 
-  &__title {
+  .side__title {
       background-color: #253141;
       height: 20px;
       align-items: center;
@@ -12,44 +12,45 @@
       padding: 40px 20px;
       justify-content: space-between;
 
-      &__sign_in_user {
+      .sign_in__user {
         font-size: 16px;
         font-weight: bold;
       }
 
-      &__menu {
+      .side__menu {
         .fa-white {
           color: $mainFontColor;
-          text-decoration: none;
+            &:visited {
+              color: #253141;
+            }
         }
       }
     }
 
-    &__group {
-      background-color: #2E3e51;
-      height: calc(100vh - 132px);
-      padding: 20px;
-      overflow: scroll;
-      font-weight: bold;
+  .group {
+    background-color: #2E3e51;
+    height: 100vh;
+    padding: 20px;
+    overflow: scroll;
+    font-weight: bold;
+    color: $mainFontColor;
+
+    .group__chat{
+      margin-bottom: 40px;
       color: $mainFontColor;
+        &:visited {
+          color: #2E3e51;
+        }
 
-      &__chat {
-        color: $mainFontColor;
-        display: block;
-        margin-bottom: 40px;
-        text-decoration: none;
-
-
-        &-name {
+      .group__chat__name {
           margin-bottom: 5px;
           font-size: 15px;
           color: $mainFontColor;
         }
 
-        &-conversation{
+      .group__chat__conversation{
           font-size: 11px;
-          color: $mainFontColor;
         }
-      }
     }
+  }
 }
