--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -1,22 +1,18 @@
-
-.side
-  .side__title
-    .sign_in__user Karen
-    .side__menu
-      = link_to '#',　class: 'new_group' do
-        = fa_icon 'edit',class: "fa-white"
-      = link_to '#',　class: 'edit_account' do
-        = fa_icon 'cog',class: "fa-white"
-  .group
-    = link_to '#', class: 'group__choice' do
-      .group__chat
-        .group__chat__name グループの名前
-        .group__chat__conversation 会話内容
-    = link_to '#',　class: 'group__choice' do
-      .group__chat
-        .group__chat__name グループの名前
-        .group__chat__conversation 会話内容
-    = link_to '#',　class: 'group__choice' do
-      .group__chat
-        .group__chat__name グループの名前
-        .group__chat__conversation 会話内容
+.sidebar
+  .sidebar__title
+    .sidebar__title__sign_in_user Karen
+    .sidebar__title__menu
+      = link_to '#', class: 'fa-white' do
+        = fa_icon 'edit'
+      = link_to '#', class: 'fa-white' do
+        = fa_icon 'cog'
+  .sidebar__group
+    = link_to '#', class: 'sidebar__group__chat' do
+      .sidebar__group__chat-name グループの名前
+      .sidebar__group__chat-conversation 会話内容
+    = link_to '#', class: 'sidebar__group__chat' do
+      .sidebar__group__chat-name グループの名前
+      .sidebar__group__chat-conversation 会話内容
+    = link_to '#', class: 'sidebar__group__chat' do
+      .sidebar__group__chat-name グループの名前
+      .sidebar__group__chat-conversation 会話内容1
