--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,7 @@
 @import "font-awesome";
-@import "config";
+@import "./config";
 @import "./reset";
 @import "./variable";
-@import "sidebar";
-@import "content";
-@import "notice";
+@import "./sidebar";
+@import "./content";
+@import "./notice";
