--- a/app/views/messages/_content.html.haml
+++ b/app/views/messages/_content.html.haml
@@ -17,8 +17,8 @@
   .chat__text
     %form.chat__text__form
     %input.chat__text__form__box
-    %label.upload-label{for: 'send-button'}
+    %label.upload-label{for: 'select-file'}
       %i.fa.fa-image.chat__text__form__folder
-      %input#send-button{:style => 'display:none;', type: 'file'}/
+      %input#select-file{:style => 'display:none;', type: 'file'}/
     %input.chat__text__submit-btn{name: 'commit', type: 'submit', value: 'Send'}/
 
