--- a/app/assets/stylesheets/_sidebar.scss
+++ b/app/assets/stylesheets/_sidebar.scss
@@ -5,12 +5,12 @@
   color: $mainFontColor;
 
   &__title {
-      background-color: #253141;
-      height: 20px;
-      align-items: center;
-      display: flex;
-      padding: 40px 20px;
-      justify-content: space-between;
+    background-color: #253141;
+    height: 20px;
+    align-items: center;
+    display: flex;
+    padding: 40px 20px;
+    justify-content: space-between;
 
       &__sign_in_user {
         font-size: 16px;
@@ -19,8 +19,7 @@
 
       &__menu {
         .fa-white {
-          color: $mainFontColor;
-          text-decoration: none;
+          color: inherit;
         }
       }
     }
@@ -39,14 +38,13 @@
         margin-bottom: 40px;
         text-decoration: none;
 
-
         &-name {
           margin-bottom: 5px;
           font-size: 15px;
           color: $mainFontColor;
         }
 
-        &-conversation{
+        &-conversation {
           font-size: 11px;
           color: $mainFontColor;
         }
