--- a/app/views/messages/_content.html.haml
+++ b/app/views/messages/_content.html.haml
@@ -19,6 +19,6 @@
     %input.chat__text__form__box
     %label.upload-label{for: 'select-file'}
       %i.fa.fa-image.chat__text__form__folder
-      %input#select-file{:style => 'display:none;', type: 'file'}/
+      %input#select-file{style: 'display:none;', type: 'file'}/
     %input.chat__text__submit-btn{name: 'commit', type: 'submit', value: 'Send'}/
 
