--- a/app/assets/stylesheets/_notice.scss
+++ b/app/assets/stylesheets/_notice.scss
@@ -1,6 +1,20 @@
-.notice {
-  background-color: $mainPointColor;
-  text-align: center;
-  color: $mainFontColor;
-  width: 100vw;
+.notification {
+
+  .notice {
+    background-color: $mainPointColor;
+    text-align: center;
+    color: $mainFontColor;
+    width: 100vw;
+  }
+
+  .alert{
+    background-color: orange;
+    text-align: center;
+    color: $mainFontColor;
+    width: 100vw;
+
+  }
+
 }
+
+
