--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,9 @@
+@import "./variable";
+@import "./user";
 @import "font-awesome";
 @import "./config";
 @import "./reset";
-@import "./variable";
 @import "./sidebar";
 @import "./content";
 @import "./notice";
+
