--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -1,10 +1,11 @@
 .sidebar
   .sidebar__title
-    .sidebar__title__sign_in_user Karen
+    .sidebar__title__sign_in_user
+      = current_user.name
     .sidebar__title__menu
       = link_to '#', class: 'fa-white' do
         = fa_icon 'edit'
-      = link_to '#', class: 'fa-white' do
+      = link_to edit_user_path(current_user), class: 'fa-white' do
         = fa_icon 'cog'
   .sidebar__group
     = link_to '#', class: 'sidebar__group__chat' do
