--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "font-awesome";
 @import "./config";
 @import "./reset";
+@import "./group";
 @import "./sidebar";
 @import "./content";
 @import "./notice";
