--- a/app/assets/stylesheets/_group.scss
+++ b/app/assets/stylesheets/_group.scss
@@ -40,15 +40,11 @@
     }
   }
 
-  .chat-group-form__field {
+  &__field {
     margin-top: 30px;
-    &:after {
-      content: "";
-      clear: both;
-      display: block;
-    }
+    @include clearfix();
 
-    .chat-group-form__field--left {
+    &--left {
       float: left;
       width: 30%;
       padding-right: 20px;
@@ -56,7 +52,7 @@
       box-sizing: border-box;
     }
 
-    .chat-group-form__field--right {
+    &--right {
       float: right;
       width: 70%;
     }
@@ -82,26 +78,22 @@
     line-height: 50px;
     font-size: 14px;
     border-bottom: 1px solid #ddd;
-    &:after {
-      content: "";
-      clear: both;
-      display: block;
-    }
+    @include clearfix();
 
-    .chat-group-user__name {
+    &__name {
       float: left;
     }
 
-    .chat-group-user__btn {
+    &__btn {
       float: right;
       display: inline-block;
       cursor: pointer;
 
-      &.chat-group-user__btn--add {
+      &__btn--add {
         color: #38aef0;
       }
 
-      &.chat-group-user__btn--remove {
+      &__btn--remove {
         color: #f05050;
       }
     }
