--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,8 +3,8 @@
 @import "font-awesome";
 @import "./config";
 @import "./reset";
+@import "./clearfix";
 @import "./group";
 @import "./sidebar";
 @import "./content";
 @import "./notice";
-
