--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -8,12 +8,8 @@
       = link_to edit_user_path(current_user), class: 'fa-white' do
         = fa_icon 'cog'
   .sidebar__group
-    = link_to '#', class: 'sidebar__group__chat' do
-      .sidebar__group__chat-name グループの名前
-      .sidebar__group__chat-conversation 会話内容
-    = link_to '#', class: 'sidebar__group__chat' do
-      .sidebar__group__chat-name グループの名前
-      .sidebar__group__chat-conversation 会話内容
-    = link_to '#', class: 'sidebar__group__chat' do
-      .sidebar__group__chat-name グループの名前
-      .sidebar__group__chat-conversation 会話内容1
+    - current_user.groups.each do |group|
+      = link_to group_messages_path(group), class: 'sidebar__group__chat' do
+        .sidebar__group__chat-name
+          = group.name
+        .sidebar__group__chat-conversation 会話内容
