--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -27,8 +27,11 @@
     .chat-group-form__field--left
       = f.label :name, 'チャットメンバー', for: 'chat_group_チャットメンバー', class: 'chat-group-form__label'
     .chat-group-form__field--right
-      = f.collection_check_boxes(:user_ids, @user, :id, :name) do |b|
+      = f.collection_check_boxes(:user_ids, @user, :id , :name) do |b|
         = b.label {b.check_box + b.text}
+      %span{style: "display:none"}
+        %input{checked: "checked", type: "checkbox"}
+          = current_user.name
   .chat-group-form__field
     .chat-group-form__field--left
     .chat-group-form__field--right
