--- a/app/views/messages/_sidebar.html.haml
+++ b/app/views/messages/_sidebar.html.haml
@@ -8,8 +8,4 @@
       = link_to edit_user_path(current_user), class: 'fa-white' do
         = fa_icon 'cog'
   .sidebar__group
-    - current_user.groups.each do |group|
-      = link_to group_messages_path(group), class: 'sidebar__group__chat' do
-        .sidebar__group__chat-name
-          = group.name
-        .sidebar__group__chat-conversation 会話内容
+    = render 'messages/repeat_groups'
