--- a/app/views/groups/_group.html.haml
+++ b/app/views/groups/_group.html.haml
@@ -1,4 +1,5 @@
 = link_to group_messages_path(group), class: 'sidebar__group__chat' do
   .sidebar__group__chat-name
     = group.name
-  .sidebar__group__chat-conversation 会話内容
+  .sidebar__group__chat-conversation
+    = group.last_message
