--- a/app/views/groups/_group_header.html.haml
+++ b/app/views/groups/_group_header.html.haml
@@ -4,5 +4,5 @@
       .chat__header__detail__box
         = @group.name
       .chat__header__detail__member Member : #{@group.users.pluck(:name).join(' ')}
-    = link_to group_messages_path(@group.id), class: 'move_to_edit' do
+    = link_to edit_group_path(@group.id), class: 'move_to_edit' do
       .chat__header__edit Edit
